NXP-28078: Format + fix some SonarQube issues